src/index.css
/* ... */
.up-card-info .left {
  padding: 10px 0px 0px;
}

.up-card-info .left span:nth-child(1) {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
  color: #1c1b1f;
}

.up-card-info .left span:nth-child(3) {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 500;
  font-size: 32px;
  line-height: 40px;
  color: #1c1b1f;
}

.up-card-info .right {
  padding: 0px 0px 0px 20px;
}

.up-card-info .right a {
  text-decoration: none;
  cursor: pointer;
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  line-height: 36px;
  color: #25518c;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2; /* number of lines to show */
  line-clamp: 2;
  -webkit-box-orient: vertical;
}

.up-card-info .right span {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #1c1b1f;
  white-space: nowrap;
  display: flex;
  gap: 3px;
  align-items: center;
}

.bottom-more {
  padding: 20px 0px;
}

.bottom-more button {
  padding: 16px 24px;
  height: 50px;
  background: #fcfcfc;
  border-radius: 5px;
  outline: none;
  border: 0px;
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 24px;
  color: #25518c;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
}

.up-right {
  max-width: 384px;
  width: 100%;
  min-width: 280px;
}

.up-right .top {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: 25px 0px;
}

.up-right .top span {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 60px;
  color: #1c1b1f;
}

.up-right .top a {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 20px;
  color: #25518c;
  padding: 18px 10px 18px;
}

.up-right .news {
  padding: 10px 0px;
}

.up-right .news .top {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.up-right .news .top .left {
  width: 149px;
  height: 34px;
  background: #25518c;
  border-radius: 6px 0px 0px 6px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.up-right .news .top .left span {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  line-height: 120%;
  /* identical to box height, or 16px */
  text-align: center;
  text-transform: uppercase;
  color: #fcfcfc;
}

.up-right .news .top .right {
  width: 149px;
  height: 34px;
  background: #fcfcfc;
  border-radius: 0px 6px 6px 0px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.up-right .news .top .right span {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 500;
  font-size: 13px;
  line-height: 120%;
  /* identical to box height, or 16px */
  text-align: center;
  text-transform: uppercase;
  color: #1c1b1f;
}

.up-right .news .bottom h4 {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 27px;
  color: #1c1b1f;
  margin: 0px 0px 5px;
}

.up-right .news .bottom p {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #1c1b1f;
  margin: 10px 0px;
}

/* == || UPCOMING EVENTS == */
/* == OFFERS == */
.offers {
  padding: 60px 0px;
}

.offer-head {
  padding: 40px 0px 20px;
}

.offer-head h1 {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 60px;
  text-align: center;
  color: #1c1b1f;
}

.offer-content {
  padding: 10px 0px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.offer-card {
  width: 280px;
  z-index: 0;
  position: relative;
  margin: 30px 0px;
}

.offer-card img {
  position: relative;
  z-index: 0;
  height: 300px;
  border-radius: 8px;
  width: 100%;
  object-fit: cover;
}

.offer-info {
  width: 250px;
  height: 333px;
  background: #fcfcfc;
  border: 1px solid #e0e2f1;
  border-radius: 5px;
  position: relative;
  z-index: 5;
  margin: -60px auto 0px;
  text-align: center;
  padding: 32px 0px 0px;
}

.offer-info span {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 36px;
  line-height: 44px;
  text-align: center;
  color: #1c1b1f;
  margin: 10px auto;
}
.offer-info .icon {
  max-width: 40px;
  max-height: 40px;
  width: 100%;
  object-fit: contain;
  align-self: center;
  justify-self: center;
}

.offer-info h3 {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  line-height: 36px;
  text-align: center;
  color: #1c1b1f;
  margin: 10px auto;
}

.offer-info p {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  color: #1c1b1f;
  margin: 10px auto;
  max-width: 200px;
}

.offer-info button {
  background: #25518c;
  width: 50px;
  height: 50px;
  border-radius: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: 0px;
  position: absolute;
  bottom: -25px;
  left: 100px;
}

/* == || OFFERS == */
/* == Projects == */
.projects {
  padding: 60px 0px;
  background: #eff1fb;
  border-radius: 5px;
}

.projects-head {
  padding: 40px 0px 20px;
}

.projects-head h1 {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 60px;
  text-align: center;
  color: #1c1b1f;
}

.projects-content {
  padding: 20px 15px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.project {
  height: fit-content;
  width: 100%;
  max-width: 584px;
  min-width: 280px;
  margin: 10px;
  border: 1px solid #e0e2f1;
  border-radius: 5px;
}

.project img {
  width: 100%;
}

.project .project-info {
  padding: 50px 30px;
}
/* ... */

